--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -99,6 +99,7 @@
             })
         }
     }
+    //管理员登录
     function landlordLogin(){
         var account = document.getElementById("accountLandlord").value;
         var password = document.getElementById("passwordLandlord").value;
