--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -241,7 +241,7 @@
                 async : false,
                 success:function(data){
                     if(data.status==1){
-                        window.location.href="";
+                        window.location.href="index.html";
                         /*跳转管理员页面*/
                     }else{
                         $("#errorMsgL").append("输入正确的账号和密码");
