--- a/src/main/webapp/userManage.html
+++ b/src/main/webapp/userManage.html
@@ -189,7 +189,7 @@
                             </div>
                             <div class="modal-body">
                                 <div class="container-fluid">
-                                    确定要删除该资源？删除后不可恢复！
+                                    确定要删除该记录？删除后不可恢复！
                                 </div>
                             </div>
                             <div class="modal-footer">
@@ -337,7 +337,7 @@
                             </div>
                             <div class="modal-body">
                                 <div class="container-fluid">
-                                    确定要删除该权限？删除后不可恢复！
+                                    确定要删除该房源？删除后不可恢复！
                                 </div>
                             </div>
                             <div class="modal-footer">
@@ -388,7 +388,7 @@
                 </div>
 
                 <!--弹出添加用户窗口-->
-                <div class="modal fade" id="addUser" role="dialog" aria-labelledby="gridSystemModalLabel">
+                <!--<div class="modal fade" id="addUser" role="dialog" aria-labelledby="gridSystemModalLabel">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -447,7 +447,7 @@
                                             <div class="col-xs-8">
                                                 <label class="control-label" for="anniu">
                                                     <input type="radio" name="situation" id="normal">正常</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                                <label class="control-label" for="meun">
+                                                <label class="control-label" for="1">
                                                     <input type="radio" name="situation" id="forbid"> 禁用</label>
                                             </div>
                                         </div>
@@ -459,10 +459,10 @@
                                 <button type="button" class="btn btn-xs btn-green">保 存</button>
                             </div>
                         </div>
-                        <!-- /.modal-content -->
+                        &lt;!&ndash; /.modal-content &ndash;&gt;
                     </div>
-                    <!-- /.modal-dialog -->
-                </div>
+                    &lt;!&ndash; /.modal-dialog &ndash;&gt;
+                </div>-->
                 <!-- /.modal -->
 
                 <!--弹出订单详情窗口-->
@@ -872,12 +872,12 @@
     }
 
     function DeleteHouseAction(){
-        alert(DeleteHouse);
+        //alert(DeleteHouseID);
         $.ajax({
-            url: "/Business/delete",
+            url: "/house/delete",
             dataType: 'json',
             type: "post",
-            data: {"houseID":DeleteHouse},
+            data: {"houseID":DeleteHouseID},
             async: false,
             success: function (msg) {
                 if (msg.status == 1){
@@ -906,6 +906,10 @@
                 }
             }
         })
+    }
+
+    function reIndex(){
+        window.location.href ="index.html";
     }
 </script>
 </body>
