共享办公室

--- a/src/main/webapp/details.html
+++ b/src/main/webapp/details.html
@@ -49,7 +49,7 @@
                             <a href="#"><i class="fa fa-phone"></i>+86 188-2741-5919</a>
                         </li>
                         <li>
-                            <a href="mailto:admin@bootexperts.com"><i class="fa fa-envelope-o"></i>admin@bootexperts.com</a>
+                            <a href="mailto:FangYuan__Liu@126.com"><i class="fa fa-envelope-o"></i>FangYuan__Liu@126.com</a>
                         </li>
                     </ul>
                 </div>
